Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.

#+TOC: headlines 5

* Changes On HEAD Since Last Release
:PROPERTIES:
:CUSTOM_ID: latest
:END:
  - Fixed Bugs
    - N/A
  - Known Issues
    - N/A
  - API breaking Changes
    - N/A
  - Deprecated functionality
    - N/A
  - New functionality
    - N/A
  - Documentation
    - ColorSchemes.html now has images for all CB schemes
  - Examples
    - New
      - newton_min_angle_starfish: Min angle newton with poles.
      - LevyCurve: Levy Curve via chaos game
      - phoenix: Classic phoenix fractal (escape time)
      - phoenixD: Classic phoenix fractal (distance estimator outside)
      - phoenixI: Classic phoenix fractal (distance estimator inside)
      - phoenixM: A movie of the classic phoenix fractal
      - phoenixM2: Another movie of the classic phoenix fractal
    - Updated
      - color_lut_docs: Now generates images for all CB schemes
      - Several: Updated doxygen markup to use @ instead of backslash
  - Miscellaneous
    - N/A
* v20.15.0.0: Feature Release
:PROPERTIES:
:CUSTOM_ID: v20.15.0.0
:END:
  - Fixed Bugs
    - N/A
  - Known Issues
    - N/A
  - API breaking Changes
    - WARNING: Eventually the deprecated headers will be removed.
    - The "all" target has been removed.  Use the "examples" target instead.
    - New release process with 4 component version numbers
  - Deprecated functionality
    - Several people reported conflicts with other packages using the same
      header names
      - Deprecated header color.hpp -- USE MRcolor.hpp instead
      - Deprecated header point2d.hpp -- USE MRpoint2d.hpp instead
      - Deprecated header colorTpl.hpp -- USE MRcolorTpl.hpp instead
  - New functionality
    - Library exported via build/MRasterLib.cmake
    - Package exported via build/MRasterConfig.cmake &
      build/MRasterConfigVersion.cmake
    - Install target created that installs:
      - MRasterLib.cmake
      - MRasterConfig.cmake & MRasterConfigVersion.cmake