@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-10-17 Thu 16:20 -->
+<!-- 2024-10-19 Sat 12:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-10-17 16:20:43</i></td>
+<td class="org-left"><i>2024-10-19 12:41:28</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-10-17 16:20:45</i></td>
+<td class="org-left"><i>2024-10-19 12:41:33</i></td>
 </tr>
 </tbody>
 </table>
@@ -302,6 +302,7 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 <li>Documentation
 <ul class="org-ul">
 <li>ColorSchemes.html now has images for all CB schemes</li>
+<li>Updated mathjax configuration for better security</li>
 </ul></li>
 <li>Examples
 <ul class="org-ul">
